lab1/Test/L1-A-3-36.output
Error Type B at Line 2
Error Type B at Line 3
Error Type A at Line 7
Error Type B at Line 9
Error Type B at Line 11
