lab1/Test/L1-A-3-36.cmm
int oQdr ( ) {
.   float szaoEifl92g [ 575575612 ] = wBJ6T9cr ;
  float IZ4hS [ 1575438553 ] [ 1247287752 ] 2069865764 
    = BP8Yi4uDfLhxJPv , PIaua7TC1uOW7lo3C ;
{
    struct {
    }YE7sDJ1aJH ;@
  }}
float xLIbSHBb0qVygW1 float ( ) {
}
struct 